--- a/collect-boot/pom.xml
+++ b/collect-boot/pom.xml
@@ -59,6 +59,12 @@
             <version>1.1.9</version>
         </dependency>
 
+        <dependency>
+             <groupId>com.google.zxing</groupId>
+            <artifactId>javase</artifactId>
+            <version>3.3.1</version>
+        </dependency>
+
         <!-- JUnit test dependency -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
