--- a/pom.xml
+++ b/pom.xml
@@ -26,19 +26,31 @@
             <id>aliyun</id>
             <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
         </repository>
+        <!--
+        <repository>
+            <id>rdc-releases</id>
+            <url>https://repo.rdc.aliyun.com/repository/49525-release-0vOOLP/</url>
+        </repository>
+        -->
+        <repository>
+            <id>rdc-snapshots</id>
+            <url>https://repo.rdc.aliyun.com/repository/49525-snapshot-xtdJFd/</url>
+        </repository>
 
+        <!--
         <repository>
             <id>tzj</id>
             <name>tzj</name>
             <url>http://180.153.19.161:8081/nexus/content/groups/public/</url>
         </repository>
+        -->
 
     </repositories>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.7</maven.compiler.source>
-        <maven.compiler.target>1.7</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
         <HikariCP.version>2.4.13</HikariCP.version>
         <fastjson.version>1.2.39</fastjson.version>
         <hufm.version>2.6.0</hufm.version>
