--- a/collect-boot/pom.xml
+++ b/collect-boot/pom.xml
@@ -13,13 +13,16 @@
 
 
     <dependencies>
-    	<!--
+
+        <!-- 不用 kill 关闭spring boot -->
+        <!--
         <dependency>
-		    <groupId>com.alipay.sdk</groupId>
-		    <artifactId>alipay-sdk-java</artifactId>
-		    <version>3.0.52.ALL</version>
-		</dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
         -->
+
+        <!-- springboot -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -29,6 +32,60 @@
             <artifactId>spring-boot-starter-jetty</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
+        <!-- springboot -->
+
+        <!-- mybatis-plus begin -->
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>dynamic-datasource-spring-boot-starter</artifactId>
+        </dependency>
+        <!-- mybatis-plus end -->
+
+        <!-- API 框架 -->
+        <dependency>
+            <groupId>com.hufm</groupId>
+            <artifactId>hufm-module-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.hufm</groupId>
+            <artifactId>hufm-module-common</artifactId>
+        </dependency>
+        <!-- API 框架 -->
+
+        <!-- 工具类 -->
+        <dependency>
+            <groupId>com.github.icecooly</groupId>
+            <artifactId>FastHttpClient</artifactId>
+        </dependency>
+        <!-- 工具类 -->
+
+        <!-- JSON -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+        </dependency>
+        <!-- JSON -->
+
+        <!-- 收呗本身的模块 -->
+        <dependency>
+            <groupId>com.tzj</groupId>
+            <artifactId>collect-module-common</artifactId>
+        </dependency>
+        <!-- 收呗本身的模块 -->
+
+
+        <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
         </dependency>
@@ -37,28 +94,12 @@
             <artifactId>HikariCP-java7</artifactId>
             <version>${HikariCP.version}</version>
         </dependency>
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>fastjson</artifactId>
-            <version>${fastjson.version}</version>
-        </dependency>
-        <!-- mybatis-plus begin -->
-        <dependency>
-            <groupId>com.baomidou</groupId>
-            <artifactId>mybatisplus-spring-boot-starter</artifactId>
-            <version>1.0.5</version>
-        </dependency>
-        <dependency>
-            <groupId>com.baomidou</groupId>
-            <artifactId>mybatis-plus</artifactId>
-            <version>2.3.3</version>
-        </dependency>
-        <!-- mybatis-plus end -->
+
 
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid-spring-boot-starter</artifactId>
-            <version>1.1.9</version>
+            <version>1.1.10</version>
         </dependency>
 
         <dependency>
@@ -95,43 +136,10 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.5</version>
         </dependency>
-        <dependency>
-            <groupId>com.hufm</groupId>
-            <artifactId>hufm-module-api</artifactId>
-            <version>${hufm.version}</version>
-        </dependency>
-        
-        <!--
-        <dependency>
-            <groupId>com.hufm</groupId>
-            <artifactId>alipay-sdk-java</artifactId>
-            <version>3.7.13</version>
-        </dependency>
-        -->
 
-        
-        <dependency>
-            <groupId>com.hufm</groupId>
-            <artifactId>hufm-module-common</artifactId>
-            <version>${hufm.version}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>net.sf.ehcache</groupId>
-                    <artifactId>ehcache-core</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        <dependency>
-            <groupId>com.hufm</groupId>
-            <artifactId>hufm-module-dbtrace</artifactId>
-            <version>${hufm.version}</version>
-        </dependency>
 
-        <dependency>
-            <groupId>com.github.icecooly</groupId>
-            <artifactId>FastHttpClient</artifactId>
-            <version>1.3</version>
-        </dependency>
+
+
 
         <!-- 增加cache -->
         <dependency>
