--- a/collect-boot/src/main/resources/application.yml
+++ b/collect-boot/src/main/resources/application.yml
@@ -10,45 +10,47 @@ server:
 
 # mysql
 spring:
-    # 环境 dev|test|pro
-    profiles:
-        active: dev
-    # cache配置
-    cache:
-        type: ehcache
-        ehcache:
-          config: classpath:config/ehcache.xml
-    # jackson时间格式化
-    jackson:
-        time-zone: GMT+8
-        date-format: yyyy-MM-dd HH:mm:ss
-    http:
-        multipart:
-            max-file-size: 100MB
-            max-request-size: 100MB
-            enabled: true
-    # 指定静态资源的路径
-    #resources:
-        #static-locations: classpath:/static/,classpath:/views/
-    redis:
-        #open: false  # 是否开启redis缓存  true开启   false关闭
-        #database: 0
-        host: 139.224.113.110
-        port: 6379
-        password: sb_123456      # 密码（默认为空）
-        timeout: 6000  # 连接超时时长（毫秒）
-        pool:
-            max-active: 1000  # 连接池最大连接数（使用负值表示没有限制）
-            max-wait: -1      # 连接池最大阻塞等待时间（使用负值表示没有限制）
-            max-idle: 10      # 连接池中的最大空闲连接
-            min-idle: 5       # 连接池中的最小空闲连接
-    thymeleaf:
-       cache: false
-       prefix: classpath:/templates/
-       suffix: .html
-       encoding: UTF-8
-       content-type: text/html
-       mode: LEGACYHTML5
+  application:
+    name: collect
+  # 环境 dev|test|pro   dynamicdb 多数据源配置
+  profiles:
+    active: dynamicdb
+  # cache配置
+  cache:
+    type: ehcache
+    ehcache:
+      config: classpath:config/ehcache.xml
+  # jackson时间格式化
+  jackson:
+    time-zone: GMT+8
+    date-format: yyyy-MM-dd HH:mm:ss
+  http:
+    multipart:
+      max-file-size: 100MB
+      max-request-size: 100MB
+      enabled: true
+  # 指定静态资源的路径
+  #resources:
+  #static-locations: classpath:/static/,classpath:/views/
+  redis:
+    #open: false  # 是否开启redis缓存  true开启   false关闭
+    #database: 0
+    host: 139.224.113.110
+    port: 6379
+    password: sb_123456      # 密码（默认为空）
+    timeout: 6000  # 连接超时时长（毫秒）
+    pool:
+      max-active: 1000  # 连接池最大连接数（使用负值表示没有限制）
+      max-wait: -1      # 连接池最大阻塞等待时间（使用负值表示没有限制）
+      max-idle: 10      # 连接池中的最大空闲连接
+      min-idle: 5       # 连接池中的最小空闲连接
+  thymeleaf:
+    cache: false
+    prefix: classpath:/templates/
+    suffix: .html
+    encoding: UTF-8
+    content-type: text/html
+    mode: LEGACYHTML5
 
 #mybatis
 mybatis-plus:
