--- a/pom.xml
+++ b/pom.xml
@@ -13,11 +13,17 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>1.5.9.RELEASE</version>
+        <!--
+        <version>2.1.5.RELEASE</version>
+        -->
     </parent>
 
     <modules>
         <module>collect-module-core</module>
         <module>collect-boot</module>
+        <module>collect-module-task</module>
+        <module>collect-module-umeng</module>
+        <module>collect-module-common</module>
     </modules>
 
     <repositories>
@@ -37,15 +43,6 @@
             <id>rdc-snapshots</id>
             <url>https://repo.rdc.aliyun.com/repository/49525-snapshot-xtdJFd/</url>
         </repository>
-
-        <!--
-        <repository>
-            <id>tzj</id>
-            <name>tzj</name>
-            <url>http://180.153.19.161:8081/nexus/content/groups/public/</url>
-        </repository>
-        -->
-
     </repositories>
 
     <properties>
@@ -54,7 +51,8 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <HikariCP.version>2.4.13</HikariCP.version>
         <fastjson.version>1.2.39</fastjson.version>
-        <hufm.version>2.6.0</hufm.version>
+        <hufm.version>4.1.1</hufm.version>
+        <mybatisplus.version>2.3.3</mybatisplus.version>
         <skipTests>true</skipTests>
     </properties>
 
@@ -67,6 +65,75 @@
                 <artifactId>umeng-openapi</artifactId>
                 <version>1.0.9</version>
             </dependency>
+            <!-- 友盟OpenAPI -->
+
+            <!-- Mybatis plus -->
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-boot-starter</artifactId>
+                <version>${mybatisplus.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus</artifactId>
+                <version>${mybatisplus.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>dynamic-datasource-spring-boot-starter</artifactId>
+                <version>2.5.4</version>
+            </dependency>
+            <!-- Mybatis plus -->
+
+            <!-- API 框架 -->
+            <dependency>
+                <groupId>com.hufm</groupId>
+                <artifactId>hufm-module-api</artifactId>
+                <version>${hufm.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.hufm</groupId>
+                <artifactId>hufm-module-common</artifactId>
+                <version>${hufm.version}</version>
+            </dependency>
+            <!-- API 框架 -->
+
+            <!-- 工具类 -->
+            <dependency>
+                <groupId>com.github.icecooly</groupId>
+                <artifactId>FastHttpClient</artifactId>
+                <version>1.3</version>
+            </dependency>
+            <!-- 工具类 -->
+
+            <!-- JSON -->
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>${fastjson.version}</version>
+            </dependency>
+            <!-- JSON -->
+
+            <!-- 收呗模块包 -->
+            <dependency>
+                <groupId>com.tzj</groupId>
+                <artifactId>collect-module-core</artifactId>
+                <version>${pom.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.tzj</groupId>
+                <artifactId>collect-module-umeng</artifactId>
+                <version>${pom.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.tzj</groupId>
+                <artifactId>collect-module-common</artifactId>
+                <version>${pom.version}</version>
+            </dependency>
+            <!-- 收呗模块包 -->
+
+
+
         </dependencies>
     </dependencyManagement>
 
