--- a/pom.xml
+++ b/pom.xml
@@ -12,10 +12,10 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.5.9.RELEASE</version>
         <!--
-        <version>2.1.5.RELEASE</version>
+        <version>1.5.9.RELEASE</version>
         -->
+        <version>2.1.5.RELEASE</version>
     </parent>
 
     <modules>
@@ -118,17 +118,17 @@
             <dependency>
                 <groupId>com.tzj</groupId>
                 <artifactId>collect-module-core</artifactId>
-                <version>${pom.version}</version>
+                <version>${project.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.tzj</groupId>
                 <artifactId>collect-module-umeng</artifactId>
-                <version>${pom.version}</version>
+                <version>${project.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.tzj</groupId>
                 <artifactId>collect-module-common</artifactId>
-                <version>${pom.version}</version>
+                <version>${project.version}</version>
             </dependency>
             <!-- 收呗模块包 -->
 
