--- a/collect-boot/src/main/resources/application.yml
+++ b/collect-boot/src/main/resources/application.yml
@@ -13,6 +13,11 @@ server:
 
 # mysql
 spring:
+  servlet:
+    multipart:
+      max-request-size: 100MB
+      enabled: true
+      max-file-size: 100MB
   application:
     name: collect
   # 环境 dev|test|pro   dynamicdb 测试多数据源配置               dynamicdb-pro 正式多数据源配置
@@ -27,11 +32,7 @@ spring:
   jackson:
     time-zone: GMT+8
     date-format: yyyy-MM-dd HH:mm:ss
-  http:
-    multipart:
-      max-request-size: 100MB
-      enabled: true
-      max-file-size: 100MB
+
   # 指定静态资源的路径
   #resources:
   #static-locations: classpath:/static/,classpath:/views/
@@ -41,19 +42,21 @@ spring:
     host: 139.224.113.110
     port: 6379
     password: sb_123456      # 密码（默认为空）
-    timeout: 6000  # 连接超时时长（毫秒）
-    pool:
-      max-active: 1000  # 连接池最大连接数（使用负值表示没有限制）
-      max-wait: -1      # 连接池最大阻塞等待时间（使用负值表示没有限制）
-      max-idle: 10      # 连接池中的最大空闲连接
-      min-idle: 5       # 连接池中的最小空闲连接
+    timeout: 1000  # 连接超时时长（毫秒）
+    jedis:
+      pool:
+        max-active: 1000  # 连接池最大连接数（使用负值表示没有限制）
+        max-wait: -1     # 连接池最大阻塞等待时间（使用负值表示没有限制）
+        max-idle: 10      # 连接池中的最大空闲连接
+        min-idle: 5       # 连接池中的最小空闲连接
   thymeleaf:
     cache: false
     prefix: classpath:/templates/
     suffix: .html
     encoding: UTF-8
-    content-type: text/html
     mode: LEGACYHTML5
+    servlet:
+      content-type: text/html
 
 #mybatis
 mybatis-plus:
