--- a/collect-module-task/src/main/resources/application.yml
+++ b/collect-module-task/src/main/resources/application.yml
@@ -3,10 +3,10 @@ spring:
     name: collect-task
   #配置MQ
   rabbitmq:
-    host: 127.0.0.1
+    host: 106.15.72.157 #内网IP 172.19.182.81
     port: 5672
-    username: guest
-    password: password
+    username: rabbitadmin
+    password: FeiLei@123
     publisher-confirms: false
 
 #热部署配置
