--- a/collect-module-task/src/main/resources/application.yml
+++ b/collect-module-task/src/main/resources/application.yml
@@ -25,5 +25,5 @@ logging:
   level:
     org.springfromework.web: warn
     org.hibernate: error
-    com.tzj: warn
+    com.tzj: info
     com.tzj.collect.mapper: debug
