--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,8 @@
         <module>collect-module-umeng</module>
         <module>collect-module-common</module>
         <module>collect-module-member</module>
+        <module>collect-module-flcx</module>
+        <module>collect-module-flcx-boot</module>
     </modules>
 
     <repositories>
