--- a/collect-module-common/pom.xml
+++ b/collect-module-common/pom.xml
@@ -25,6 +25,16 @@
         </dependency>
         <!-- JSON -->
 
+        <!--添加导入/出表格依赖-->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>3.9</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+        </dependency>
 
 
     </dependencies>
