垃圾分类查询模块独立

--- a/collect-module-flcx-boot/pom.xml
+++ b/collect-module-flcx-boot/pom.xml
@@ -132,11 +132,10 @@
         </dependency>
 
 
+        <!-- 自身模块 -->
         <dependency>
             <groupId>com.tzj</groupId>
             <artifactId>collect-module-flcx</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>com.tzj</groupId>
