--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,7 @@
         <fastjson.version>1.2.39</fastjson.version>
         <hufm.version>4.1.2</hufm.version>
         <mybatisplus.version>2.3.3</mybatisplus.version>
+        <druid.version>1.1.10</druid.version>
         <skipTests>true</skipTests>
     </properties>
 
@@ -156,7 +157,13 @@
             </dependency>
             <!-- 收呗模块包 -->
 
-
+            <!-- 连接池 -->
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>druid-spring-boot-starter</artifactId>
+                <version>${druid.version}</version>
+            </dependency>
+            <!-- 连接池 -->
 
         </dependencies>
     </dependencyManagement>
