--- a/collect-module-task/pom.xml
+++ b/collect-module-task/pom.xml
@@ -40,6 +40,10 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.tzj</groupId>
+            <artifactId>collect-module-flcx</artifactId>
+        </dependency>
 
     </dependencies>
 
