--- a/collect-module-flcx-boot/src/main/resources/application.yml
+++ b/collect-module-flcx-boot/src/main/resources/application.yml
@@ -39,7 +39,7 @@ spring:
   redis:
     #open: false  # 是否开启redis缓存  true开启   false关闭
     #database: 0
-    host: 106.15.72.157 #内网IP 172.19.182.81
+    host: 106.15.72.157 #内网IP 172.19.182.81 外网IP 106.15.72.157
     port: 6379
     password: FeiLei_!@#      # 密码（默认为空）
     timeout: 1000  # 连接超时时长（毫秒）
@@ -59,7 +59,7 @@ spring:
       content-type: text/html
   #配置MQ
   rabbitmq:
-    host: 106.15.72.157 #内网IP 172.19.182.81
+    host: 106.15.72.157 #内网IP 172.19.182.81 外网IP 106.15.72.157
     port: 5672
     username: rabbitadmin
     password: FeiLei@123
