--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,12 @@
                 <artifactId>FastHttpClient</artifactId>
                 <version>1.3</version>
             </dependency>
+
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>3.5</version>
+            </dependency>
             <!-- 工具类 -->
 
             <!-- JSON -->
