--- a/collect-module-flcx/pom.xml
+++ b/collect-module-flcx/pom.xml
@@ -53,6 +53,11 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-actuator</artifactId>
+            <version>1.5.3.RELEASE</version>
+        </dependency>
 
     </dependencies>
 </project>
