--- a/collect-module-flcx/pom.xml
+++ b/collect-module-flcx/pom.xml
@@ -58,6 +58,11 @@
             <artifactId>spring-boot-actuator</artifactId>
             <version>1.5.3.RELEASE</version>
         </dependency>
-
+        <!-- 官方maven库 -->
+        <dependency>
+            <groupId>com.alipay.sdk</groupId>
+            <artifactId>alipay-sdk-java</artifactId>
+            <version>3.7.73.ALL</version>
+        </dependency>
     </dependencies>
 </project>
