--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <module>collect-module-member</module>
         <module>collect-module-flcx</module>
         <module>collect-module-flcx-boot</module>
+        <module>collect-module-club</module>
     </modules>
 
     <repositories>
