城市动态展示内容

--- a/collect-module-flcx-boot/pom.xml
+++ b/collect-module-flcx-boot/pom.xml
@@ -143,8 +143,8 @@
         <dependency>
             <groupId>com.alipay</groupId>
             <artifactId>alipay-sdk</artifactId>
+            <version>${alipay-sdk.version}</version>
         </dependency>
-
     </dependencies>
 
 
