--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
         <module>collect-module-flcx</module>
         <module>collect-module-flcx-boot</module>
         <module>collect-module-club</module>
+        <module>collect-module-daliyda</module>
     </modules>
 
     <repositories>
