--- a/collect-module-daliyda/pom.xml
+++ b/collect-module-daliyda/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>collect-module-daliy-da</artifactId>
+    <artifactId>collect-module-daliyda</artifactId>
     <description>每日答答答</description>
     <dependencies>
         <!-- springboot -->
