每日答答答(需要完成的接口)

--- a/collect-boot/pom.xml
+++ b/collect-boot/pom.xml
@@ -261,6 +261,10 @@
             <version>1.18.4</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.tzj</groupId>
+            <artifactId>collect-module-dailyda</artifactId>
+        </dependency>
 
     </dependencies>
 
