--- a/collect-boot/src/main/resources/application.yml
+++ b/collect-boot/src/main/resources/application.yml
@@ -99,4 +99,12 @@ devtools:
     enabled: true
     #additional-exclude: views/**
 
-
+#配置日志
+logging:
+  #配置日志文件路径
+  path: /temp/collect.log
+  level:
+    org.springfromework.web: warn
+    org.hibernate: error
+    com.tzj: info
+    com.tzj.collect.mapper: debug
