--- a/collect-boot/src/main/resources/application.yml
+++ b/collect-boot/src/main/resources/application.yml
@@ -39,6 +39,8 @@ spring:
   redis:
     #open: false  # 是否开启redis缓存  true开启   false关闭
     #database: 0
+    # 正式地址
+#    host: r-uf6d7cda9ccf46a4.redis.rds.aliyuncs.com
     host: 139.224.113.110
     port: 6379
     password: sb_123456      # 密码（默认为空）
