--- a/collect-boot/src/main/resources/application.yml
+++ b/collect-boot/src/main/resources/application.yml
@@ -22,7 +22,7 @@ spring:
     name: collect
   # 环境 dev|test|pro   dynamicdb 测试多数据源配置               dynamicdb-pro 正式多数据源配置
   profiles:
-    active: dynamicdb-pro
+    active: dynamicdb
   # cache配置
   cache:
     type: ehcache
@@ -44,7 +44,7 @@ spring:
     # 正式地址
     host: 172.19.193.25
     # 测试6370 正式6379
-    port: 6379
+    port: 6370
     password: sb_123456      # 密码（默认为空）
     timeout: 1000  # 连接超时时长（毫秒）
     jedis:
