--- a/collect-module-dailyda/pom.xml
+++ b/collect-module-dailyda/pom.xml
@@ -48,10 +48,10 @@
             <groupId>com.tzj</groupId>
             <artifactId>collect-module-common</artifactId>
         </dependency>
-        <dependency>
-            <groupId>com.tzj</groupId>
-            <artifactId>collect-module-core</artifactId>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.tzj</groupId>-->
+            <!--<artifactId>collect-module-core</artifactId>-->
+        <!--</dependency>-->
         <!-- API 框架 -->
 
         <dependency>
