--- a/collect-boot/pom.xml
+++ b/collect-boot/pom.xml
@@ -261,10 +261,10 @@
             <version>1.18.4</version>
             <scope>provided</scope>
         </dependency>
-        <dependency>
-            <groupId>com.tzj</groupId>
-            <artifactId>collect-module-dailyda</artifactId>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.tzj</groupId>-->
+            <!--<artifactId>collect-module-dailyda</artifactId>-->
+        <!--</dependency>-->
 
     </dependencies>
 
