答答答-红包变更及消息推送

--- a/collect-module-task/pom.xml
+++ b/collect-module-task/pom.xml
@@ -79,6 +79,10 @@
             <groupId>com.tzj</groupId>
             <artifactId>collect-module-flcx</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.tzj</groupId>
+            <artifactId>collect-module-dailyda</artifactId>
+        </dependency>
 
 
         <!-- mybatis-plus begin -->
