答答答-redis变更及推送

--- a/collect-boot/src/main/resources/application.yml
+++ b/collect-boot/src/main/resources/application.yml
@@ -22,7 +22,7 @@ spring:
     name: collect
   # 环境 dev|test|pro   dynamicdb 测试多数据源配置               dynamicdb-pro 正式多数据源配置
   profiles:
-    active: dynamicdb
+    active: dynamicdb-pro
   # cache配置
   cache:
     type: ehcache
@@ -111,4 +111,4 @@ logging:
     org.springfromework.web: warn
     org.hibernate: error
     com.tzj: info
-#    com.tzj.collect.mapper: debug
+    com.tzj.collect.mapper: debug
