--- a/collect-module-dailyda-boot/src/main/resources/application.yml
+++ b/collect-module-dailyda-boot/src/main/resources/application.yml
@@ -22,7 +22,7 @@ spring:
     name: collect
   # 环境 dev|test|pro   dynamicdb 测试多数据源配置               dynamicdb-pro 正式多数据源配置
   profiles:
-    active: dynamicdb
+    active: dynamicdb-pro
   # cache配置
   cache:
     type: ehcache
