答答答-任务多redis

--- a/collect-module-task/src/main/resources/application.yml
+++ b/collect-module-task/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: collect-task
   profiles:
-    active: dynamicdb
+    active: dynamicdb-pro
   #配置MQ
   rabbitmq:
     host: 106.15.72.157 #内网IP 172.19.182.81
@@ -24,8 +24,15 @@ spring:
         max-idle: 10      # 连接池中的最大空闲连接
         min-idle: 5       # 连接池中的最小空闲连接
 
-
-
+  redis2:
+    #open: false  # 是否开启redis缓存  true开启   false关闭
+    #database: 0
+    host:  r-uf6crus7stfo0npql7.redis.rds.aliyuncs.com
+    password: sb_123456      # 密码（默认为空）
+#    host: 172.19.193.25
+#    # 测试6370 正式6379
+#    port: 6379
+#    password: sb_123456
 
 #mybatis
 mybatis-plus:
