--- a/collect-module-task/src/main/resources/application-dynamicdb.yml
+++ b/collect-module-task/src/main/resources/application-dynamicdb.yml
@@ -28,9 +28,9 @@ spring:
           #driver-class-name: com.mysql.jdbc.Driver
         #定义从库连接收呗正式数据库(主库（答答答周榜需用主库）)
         slave_1:
-          url: jdbc:mysql://rm-uf6aj80zy36o1mb10.mysql.rds.aliyuncs.com/shoubei?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Hongkong
-          username: sb_admin
-          password: shoubei_123
+          url: jdbc:mysql://47.103.192.72:3306/collect?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Hongkong
+          username: devuser
+          password: dev123456@1
           driver-class-name: com.mysql.cj.jdbc.Driver
 #          #driver-class-name: com.mysql.jdbc.Driver
 #        slave_2:
