--- a/collect-module-task/pom.xml
+++ b/collect-module-task/pom.xml
@@ -121,7 +121,11 @@
             <version>1.18.4</version>
             <scope>provided</scope>
         </dependency>
-
+        <dependency>
+            <groupId>com.alipay.sdk</groupId>
+            <artifactId>alipay-sdk-java</artifactId>
+            <version>4.5.0.ALL</version>
+        </dependency>
     </dependencies>
 
     <build>
