答答答-红包变积分

--- a/collect-boot/pom.xml
+++ b/collect-boot/pom.xml
@@ -269,6 +269,7 @@
     </dependencies>
 
     <build>
+        <finalName>collect.jar</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
