收呗-优化-打包增加时间版本

--- a/collect-boot/pom.xml
+++ b/collect-boot/pom.xml
@@ -269,7 +269,7 @@
     </dependencies>
 
     <build>
-        <finalName>collect-boot</finalName>
+        <finalName>collect-boot-${maven.build.timestamp}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
