--- a/collect-module-task-collect/pom.xml
+++ b/collect-module-task-collect/pom.xml
@@ -125,7 +125,7 @@
     </dependencies>
 
     <build>
-        <finalName>collect-task</finalName>
+        <finalName>collect-task-${maven.build.timestamp}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
