--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
         <skipTests>true</skipTests>
         <alipay-sdk.version>3.7.151.ALL</alipay-sdk.version>
         <!--打包增加时间版本-->
-        <maven.build.timestamp.format>yyyy-MM</maven.build.timestamp.format>
+        <maven.build.timestamp.format>MMdd</maven.build.timestamp.format>
     </properties>
 
     <dependencyManagement>
