--- a/collect-module-task-collect/src/main/resources/application-dynamicdb-pro.yml
+++ b/collect-module-task-collect/src/main/resources/application-dynamicdb-pro.yml
@@ -21,7 +21,7 @@ spring:
       primary: master #设置默认的数据源或者数据源组,默认值即为master,如果你主从默认下主库的名称就是master可不定义此项。
       datasource:
         master:
-          url: jdbc:mysql://rr-uf68jtqx8eo2ce0ew.mysql.rds.aliyuncs.com/shoubei?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Hongkong
+          url: jdbc:mysql://rm-uf6aj80zy36o1mb10.mysql.rds.aliyuncs.com/shoubei?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Hongkong
           username: sb_admin
           password: shoubei_123
           driver-class-name: com.mysql.cj.jdbc.Driver
