数据库配置测试环境以及正式环境，启动的时候，可以指定测试环境还是正式环境

--- a/collect-boot/src/main/resources/application.yml
+++ b/collect-boot/src/main/resources/application.yml
@@ -20,9 +20,10 @@ spring:
       max-file-size: 100MB
   application:
     name: collect
-  # 环境 dev|test|pro   dynamicdb 测试多数据源配置               dynamicdb-pro 正式多数据源配置
+  # 环境 dev|pro   dynamicdb-test 测试多数据源配置               dynamicdb-pro 正式多数据源配置
   profiles:
-    active: dynamicdb
+    #默认启动测试环境。可以启动应用的时候指定当前环境 java -jar myproject.jar --spring.profiles.active = dynamicdb-pro
+    active: dynamicdb-test
   # cache配置
   cache:
     type: ehcache
