--- a/collect-boot/src/main/resources/application-dynamicdb-pro.yml
+++ b/collect-boot/src/main/resources/application-dynamicdb-pro.yml
@@ -47,3 +47,12 @@ spring:
           #password: dev123456@1
           driver-class-name: com.mysql.cj.jdbc.Driver
           #driver-class-name: com.mysql.jdbc.Driver
+
+
+  #配置MQ
+  rabbitmq:
+    host: 172.19.182.81
+    port: 5672
+    username: rabbitadmin
+    password: FeiLei@123
+    publisher-confirms: false
