--- a/collect-boot/src/main/resources/application-dynamicdb-test.yml
+++ b/collect-boot/src/main/resources/application-dynamicdb-test.yml
@@ -47,3 +47,11 @@ spring:
           password: dev123456@1
           driver-class-name: com.mysql.cj.jdbc.Driver
           #driver-class-name: com.mysql.jdbc.Driver
+
+  #配置MQ
+  rabbitmq:
+    host: 106.15.72.157 #内网IP 172.19.182.81
+    port: 5672
+    username: rabbitadmin
+    password: FeiLei@123
+    publisher-confirms: false
